# slurminator

./: .envrc.example  .gitattributes  .gitignore  README.md  pyproject.toml
data/: .gitignore  user-map.example.json
src/slurminator/: __init__.py  __main__.py  cli.py  config.py  db.py  identity.py  models.py  notifier.py  probe.py  service.py  slurm.py  util.py  warning_text.py
